refactor: PostService에 JPA 적용